<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamProject</string>
    <string name="action_settings">Settings</string>
    <string name="title">긴급상황 SOS</string>
    <string name="edu_mode">학습하기</string>
    <string name="earthquake">지진</string>
    <string name="flood">홍수</string>
    <string name="typhoon">태풍</string>
    <string name="fire">화재</string>
    <string name="tsunami">쓰나미</string>
    <string name="rule">위급 상황 시 행동원칙</string>
    <string name="cr">심폐소생술</string>
    <string name="emer_1">대피소</string>
    <string name="emer_2">사이렌</string>
    <string name="emer_3">손전등</string>
    <string name="emer_4">긴급문자</string>
    <string name="emer_5">비상라디오</string>
    <string name="emer_6">긴급SNS</string>
    <string name="emer_8">비상방송</string>
    <string name="emer_9">번호지정</string>
    <string name="emer_call">긴급전화</string>
    <string name="emer_call_custom">지정번호</string>
    <string name="edu_text">행동지침</string>
    <string name="edu_movie">교육영상</string>
    <string name="edu_aid">응급처치법</string>
    <string name="edu_equ">구조장비 사용법</string>
    <string name="edu_quiz">재난상식퀴즈</string>
	<string name="query">대피소</string>
	<string name="aed">제세동기</string>
	<string name="lift">완강기</string>
	<string name="ar">공기호흡기</string>
	<string name="gm">방독면</string>
	<string name="fe">소화기</string>
	<string name="hs">지혈</string>
	<string name="shock">쇼크</string>
	<string name="frac">골절</string>
	<string name="burn">화상</string>
	
	<string name="ok">확인</string>
	<string name="cancel">취소</string>
	
	<string name="spnum_1">지정번호를 입력하세요</string>
	<string name="spnum_2">지정번호</string>
    
    <string name="sns_1">도와주세요.</string>
	<string name="sns_2">SNS정보공유</string>

    
    <string name="sms_1">지금은 긴급상황입니다. 도와주세요. 저는 지금</string>
    <string name="sms_2">에 있습니다.</string>
    <string name="sms_3">이곳은 </string>
    <string name="sms_4"> 근처 입니다.</string>
    
    <string name="addr_1">위도 : </string>
    <string name="addr_2">경도 : </string>
    <string name="addr_3">고도 : </string>
    <string name="addr_4">위치를 알 수 없는 곳</string>
    
    <string name="edu_rule_1">1) 위험\n\n
		어떤 잠재적인 위험이라도 해가 될 수 있으므로 먼저 확인해야 한다.\n\n
		- 주변에 위험한 요소는 없는지, 구조자가 위험에 노출되지 않도록 한다.\n
		- 지나가는 사람도 위험에 노출되지 않도록 한다.\n
		- 위험요소의 제거가 안전하게 이루어질 수 있다면 즉시 제거한다.\n
		- 화재 현장 같은 위험한 상황이 아니면 환자를 옮기지 않는다.</string>
    <string name="edu_rule_2">2) 반응 \n\n
		반응 정도를 확인해야 한다.\n\n
		- 환자가 의식이 없거나 혼미한 경우에는 환자에게 크게 소리쳐서 반응을 확인한다.(예: "제 말 들리세요?")\n
		- 만약에 크기 불러도 반응이 없다면 양 어깨를 두드린다.\n
		- 영아 (1세 미만)  발바닥을 때려 확인한다.</string>
    <string name="edu_rule_3">3) 도움요청\n\n
		만약 반응이 없으면 지나가는 사람이나 동료에게 소리쳐서 신고를 위한  도움을 요청해야 한다.\n
		가능하면 아는 사람을 지목하도록 하며, 눈을 맞추어 이해했는지 확인해야 한다.\n\n
		4) 기도\n\n
		기도( 입부터 허파까지의 호흡을 위한 길)가 적절한 호흡을 위하여 문제가 없는지 확인해야 한다.\n
		- 입을 열고 기도를 막고 있는 물질이 있다면 제거해야 하는데, 앞쪽에 잘 보이는 경우만 기구를 써서 제거한다.</string>
	<string name="edu_rule_4">5) 호흡\n\n
		환자가 호흡을 하고 있는지 확인하고 호흡이 없다면 보조한다.\n\n
		- 가슴이 오르락내리락 하는지 확인한다.\n
		- 귀를 환자의 입 가까이 갖다 대어 호흡음을 들어 본다.\n
		- 뺨이나 귀를 환자의 얼굴에 갖다 대어 호흡이 느껴지는지 확인한다.\n
		- 다른 생명의 증거를 확인한다.(예: 몸의 자발적 움직임, 침을 삼킴, 기침함)\n
		- 2번의 인공호흡을 시행한다.</string>
	<string name="edu_rule_5">6) 순환의 증거\n\n
		순환이 있는지 확인한다.\n\n
		- 호흡, 기침 혹은 어떤 움직임이 있는지 확인한다.\n
		- 특별히 숙련된 의료인이나 응급의료종사자가 아니면 굳이 맥박을 만져서 확인하려고 노력할 필요는 없다.\n
		- 순환의 증거가 없으면 흉부 압박을 시행한다. 흉부 압박 등을 하려면 기초적인 술기의 교육을받아야 한다.\n
		7) 전화로 도움을 요청할 때\n
		- 응급 서비스 : 119</string>
	<string name="edu_rule_6">8) 전화로 도움을 요청할 때 무슨 말을 해야 하나?\n\n
		- 전화 건 사람의 이름을 말하고 응급상황에서 도움을 주려는 사람이라고 밝힌다.\n
		- 전화건 사람의 전화번호\n
		- 상황 발생 장소 : 주소나 거리 이름, 눈에 잘 띄는 대표적인 유명한 장소를 기준으로 설명.\n
		- 상황의 종류 : 예) "교통사고인데, 두차가 충돌하였고, 도로는 막혔으며, 세명이 차 안에 있음"\n
		- 희생자들의 수, 성별 및 대략의 나이와 기타 희생자들의 상황에 대한 가능한 정보\n
		- 위험물질에 대한 자세한 정보 : 가스 유무, 현장의 기후 정보(안개,얼음 등)</string>
	<string name="network">네트워크 연결 상태를 확인해주세요.</string>
</resources>